# hitalent-test

./: README.md  docker-compose.yml  pyproject.toml  test.yml
.envs_example/: .postgres
.fixtures/: db_dump.sql
alembic/: env.py
app/: alembic.ini  main.py
app/alembic/versions/: 2025_04_10_0905-1b89263ee7b0_initial.py
app/config/: database.py  settings.py
app/models/: reservation.py  table.py
app/repository/: base.py  reservation.py  table.py
app/repository/filters/: base.py  reservation.py
app/routers/: api.py  exceptions.py  ssr.py
app/routers/v1/: reservation.py  table.py
app/schemas/: reservation.py  table.py
app/services/: base.py  reservation.py  table.py
app/static/css/: styles.css
app/static/js/: scripts.js
app/templates/: base.html
app/templates/pages/: table-detail.html
app/tests/: conftest.py  factories.py  fixtures.py
app/tests/repositories/: test_reservations.py  test_tables.py
app/tests/routes/: test_reservations.py  test_tables.py
app/tests/utils/: reservations.py  tables.py
compose/fastapi/: Dockerfile
compose/postgres/: Dockerfile
src/: main.py
src/config/: settings.py
src/models/: reservation.py  table.py
src/repository/: base.py  reservation.py  table.py
src/repository/filters/: base.py  reservation.py
src/routers/: api.py  ssr.py
src/routers/v1/: __init__.py  reservation.py  table.py
src/schemas/: reservation.py  table.py
src/services/: base.py  reservation.py  table.py
